# phigrab

./: .gitignore  Cargo.toml  README-zh_CN.md  README.md  rust-toolchain.toml
.github/workflows/: check.yml  release.yml
assets/dexopt/: baseline.prof  baseline.profm
dghub/: IMPORT_GUIDE.md  PHIRA_INTEGRATION.md  PLUGIN_DEVELOPMENT.md
dghub/demo_external/: main.py  manifest.json
dghub/phira_plugin/: README.md  manifest.json
dghub/wt_coyote/: main.py  manifest.json
phira/: Cargo.toml
phira-main/: Cargo.toml
phira-monitor/: Cargo.toml
phira.xcodeproj/: project.pbxproj
phira.xcodeproj/xcshareddata/xcschemes/: phira.xcscheme
phira/icon/: big  medium  small
phira/locales/en-US/: common.ftl  settings.ftl
phira/locales/zh-CN/: common.ftl  settings.ftl
phira/locales/zh-TW/: common.ftl  settings.ftl
phira/src/: charts_view.rs  client.rs  dghub.rs  icons.rs  lib.rs  page.rs
phira/src/client/: model.rs
phira/src/page/: home.rs  library.rs  settings.rs
phira/src/scene/: main.rs  song.rs
prpr/: Cargo.toml
prpr-avc/: Cargo.toml  build.rs
prpr-l10n/: Cargo.toml
prpr-pbc/: Cargo.toml
prpr/src/: config.rs  judge.rs  lib.rs  scene.rs  ui.rs
prpr/src/core/: resource.rs
prpr/src/scene/: game.rs
release-page/: index.html
scripts/: build_desktop_release.sh  build_ios_release.sh  check_update_notice.sh  generate_icon.py  run_android_release.sh
