[package]
name = "phira-main"
version = "0.7.1"
edition = "2021"
license = "GPL-3.0-only"

[package.metadata.android]
package_name = "com.pingfanh.phigrab"
label = "Phigrab"
assets = "../assets"
res = "android-res"
icon = "@mipmap/ic_launcher"

[features]
default = ["video"]
video = ["phira/video"]

[dependencies]
phira = { path = "../phira", default-features = false }
