[package]
name = "phira"
version = "0.7.1"
edition = "2021"
license = "GPL-3.0-only"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(closed)'] }

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["video"]
video = ["prpr/video"]
chat = []
aa = []
event_debug = []

[dependencies]
anyhow = { version = "1.0" }
arc-swap = "1.9.0"
async-trait = { version = "0.1.89" }
base64 = { version = "0.22.1" }
bitflags = { version = "2.11.0" }
bytes = "1.11.1"
bytesize = "2.3.1"
cacache = { version = "13.1.0", default-features = false, features = [
    "tokio-runtime",
] }
cfg-if = "1.0.4"
chrono = { version = "0.4.44", features = ["serde"] }
dashmap = "6.1.0"
futures-util = { version = "0.3.32" }
hex = { version = "0.4.3" }
image = { version = "0.25.10", default-features = false, features = [
    "bmp",
    "gif",
    "jpeg",
    "png",
    "rayon",
    "webp",
] }
inputbox = { version = "0.1.1" }
logos = "0.16.1"
lru = { version = "0.16.3" }
lyon = { version = "1.0.19" }
macroquad = { git = "https://github.com/Mivik/prpr-macroquad", rev = "b2eab29", default-features = false }
nalgebra = { version = "0.34.1" }
once_cell = { version = "1.21.4" }
pollster = { version = "0.4.0" }
prpr = { path = "../prpr", features = ["log"], default-features = false }
prpr-l10n = { path = "../prpr-l10n" }
rand = { version = "0.8.5" }
regex = { version = "1.12.3" }
reqwest = { version = "0.13.2", default-features = false, features = [
    "json",
    "stream",
    "gzip",
    "charset",
    "http2",
    "system-proxy",
    "rustls",
    "query",
] }
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
serde_yaml = { version = "0.9.34" }
sha2 = { version = "0.10.9" }
smallvec = "1.15.1"
tap = "1.0.1"
tempfile = { version = "3.27.0" }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "sync"] }
tracing = { version = "0.1.44" }
uuid = { version = "1.22.0", features = ["v4", "serde"] }
walkdir = { version = "2.5.0" }
zip = { version = "8.3.0", default-features = false, features = ["chrono"] }
zstd = "0.13"

miniquad = { git = "https://github.com/Mivik/prpr-miniquad", rev = "0c525a3" }
phira-mp-client = { git = "https://github.com/TeamFlos/phira-mp", rev = "6967475" }
phira-mp-common = { git = "https://github.com/TeamFlos/phira-mp", rev = "6967475" }
sanitize-filename = "0.6.0"
tokio-tungstenite = { version = "0.24.0" }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22.4"
ndk-context = "0.1"
sasa = { git = "https://github.com/Mivik/sasa", rev = "e76229b", default-features = false, features = ["oboe"] }

[target.'cfg(target_env = "ohos")'.dependencies]
sasa = { git = "https://github.com/Mivik/sasa", rev = "e76229b", default-features = false, features = ["ohos"] }
napi-derive-ohos = { version = "1.1.6" }
napi-ohos = { version = "1.1.6", default-features = false, features = [
    "napi8",
    "async",
] }

[target.'cfg(not(any(target_os = "android", target_env = "ohos")))'.dependencies]
sasa = { git = "https://github.com/Mivik/sasa", rev = "e76229b", default-features = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios", target_env = "ohos")))'.dependencies]
rfd = { version = "0.17.2" }

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = { version = "0.6.4" }
objc2-foundation = { version = "0.3.2" }
objc2-ui-kit = { version = "0.3.2" }

[build-dependencies]
dotenv-build = "0.1"

[dev-dependencies]
fluent = { version = "0.17.0" }
fluent-syntax = { version = "0.12.0" }
