[package]
name = "prpr-avc"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
thiserror = "2.0.18"
tracing = { version = "0.1.44" }

[target.'cfg(target_env = "ohos")'.dependencies]
sasa = { git = "https://github.com/Mivik/sasa", rev = "e76229b", default-features = false, features = ["ohos"] }

[target.'cfg(not(target_env = "ohos"))'.dependencies]
sasa = { git = "https://github.com/Mivik/sasa", rev = "e76229b", default-features = false }
