[package]
name = "prpr-l10n"
version = "0.1.0"
edition = "2021"

[dependencies]
fluent = { version = "0.17.0" }
fluent-syntax = { version = "0.12.0" }
lru = { version = "0.16.3" }
once_cell = { version = "1.21.4" }
sys-locale = { version = "0.3.2" }
tracing = { version = "0.1.44" }
unic-langid = { version = "0.9.6", features = ["macros"] }
walkdir = { version = "2.5.0" }
